feat: update kafka and debezium